[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datalox-api-gym"
version = "0.0.0"
description = "Source-backed dry-run worlds for testing, evaluating, training, and auditing tool-using agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
]

[project.scripts]
api-gym = "api_gym.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[tool.setuptools.packages.find]
include = ["api_gym*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
